# count-graph-homs

./: .gitignore  LICENSE  README.md  concurrent_hom_count.py  experiment_helpers.py  help_functions.py  helper_functions.c  helper_functions.pxd  helper_functions.py  helper_functions.pyx  helper_functions_pyx.c  hom-count-exp.ipynb  hom_count_bounded_degree.py  local_helpers.py  local_hom_count.py  local_hom_count_best.py  local_hom_count_best_parallel.py  local_hom_count_better_int_dict.py  local_hom_count_colour.py  local_hom_count_int.py  local_hom_count_int_dict.py  local_hom_count_int_pre.py  local_hom_count_int_pre_adj.py  local_hom_count_int_pre_np.py  local_hom_count_pyx.pyx  local_tree_decomp.py  numba_opt.py  parallel_hom_count.py  setup.py  standard_hom_count.py  test_suite.py  tutorial.ipynb
cython-code/: helper_functions.c  local_hom_count_pyx.pyx
deprecated/: hom_count_basic.py  hom_count_int.py
github/local-hom-count/: hom-count-exp.ipynb
hom_count_core/: CMakeLists.txt  graph_utils.cpp  graph_utils.h  main.cpp
